--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -141,7 +141,7 @@
 
         <include
             android:id="@+id/content"
-            layout="@layout/content_scrolling" />
+            layout="@layout/profile_content" />
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/image"
