--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,7 +25,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="right"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:orientation="horizontal"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="4dp">
@@ -37,6 +38,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center"
+
                 android:textSize="22sp"
                 android:fontFamily="@font/logo_font"
                 android:textColor="@color/mdtp_white"
@@ -47,7 +49,8 @@
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:layout_margin="10dp"
-                android:src="@drawable/ic_sort" />
+                android:src="@drawable/ic_sort"
+                android:visibility="invisible" />
 
         </LinearLayout>
 
