--- a/app/src/main/res/layout/advice_view_item.xml
+++ b/app/src/main/res/layout/advice_view_item.xml
@@ -55,7 +55,8 @@
             android:layout_height="wrap_content"
             android:text="Wed, 20 Jan 19, 05:08 PM"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@color/grey_40" />
+            android:textColor="@color/grey_40"
+            android:visibility="gone" />
 
         <View
             android:layout_width="0dp"
