--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -73,19 +73,31 @@
         android:id="@+id/signedInUserContainesr"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textDirection="rtl"
-        android:layoutDirection="rtl"
         android:fitsSystemWindows="true"
-        android:visibility="gone"
-        tools:visibility="visible">
+        android:layoutDirection="rtl"
+        android:textDirection="rtl"
+        android:visibility="gone">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/edit_my_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/fab_margin"
+            android:layout_marginTop="@dimen/fab_margin"
+            android:backgroundTint="@color/primary"
+            android:src="@drawable/ic_baseline_edit_24"
+            app:fabSize="mini"
+            app:layout_anchor="@id/app_bar"
+            app:layout_anchorGravity="top|start" />
+
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/app_bar_height"
             android:fitsSystemWindows="true"
-            android:textDirection="rtl"
             android:layoutDirection="rtl"
+            android:textDirection="rtl"
             android:theme="@style/Theme.FirebaseMVVM.AppBarOverlay">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -102,6 +114,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
+
 
                     <ImageView
                         android:id="@+id/profileBackground"
@@ -121,10 +134,10 @@
                         android:id="@+id/age"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layoutDirection="rtl"
                         android:text="28"
                         android:textAlignment="center"
                         android:textDirection="rtl"
-                        android:layoutDirection="rtl"
                         android:textSize="32sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/profileBackground"
@@ -136,10 +149,10 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layoutDirection="rtl"
                         android:text="سنة"
                         android:textAlignment="center"
                         android:textDirection="rtl"
-                        android:layoutDirection="rtl"
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/profileBackground"
@@ -156,10 +169,10 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
-                        android:textDirection="rtl"
                         android:layoutDirection="rtl"
                         android:text="عريس ملتحي"
                         android:textColor="@color/grey_800"
+                        android:textDirection="rtl"
                         android:textSize="32sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/profileBackground"
@@ -184,7 +197,7 @@
 
         <include
             android:id="@+id/content"
-            layout="@layout/content_scrolling" />
+            layout="@layout/profile_content" />
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/image"
@@ -211,8 +224,8 @@
             android:layout_height="150dp"
             android:alpha="0.5"
             android:layoutDirection="rtl"
-            android:textDirection="rtl"
             android:src="@drawable/ic_baseline_account_circle_24"
+            android:textDirection="rtl"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -226,9 +239,9 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="16dp"
             android:layoutDirection="rtl"
-            android:textDirection="rtl"
             android:text="قم بإنشاء حسابك الخاص حتى تستقبل وترسل الطلبات"
             android:textColor="@color/grey_60"
+            android:textDirection="rtl"
             app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
