--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -81,7 +81,14 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.muslims.firebasemvvm.ui.login_registeration.ui.login.LoginFragment"
-        android:label="LoginFragment" />
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_navigation_home"
+            app:destination="@id/navigation_home" />
+        <action
+            android:id="@+id/action_loginFragment_to_registerationFragment"
+            app:destination="@id/registerationFragment" />
+    </fragment>
     <fragment
         android:id="@+id/adviceDetailsFragment"
         android:name="com.muslims.firebasemvvm.ui.advice_details.AdviceDetailsFragment"
