--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MainTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.MainTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorPrimaryVariant">@color/colorPrimary</item>
@@ -19,6 +20,11 @@
         <!--        <item name="android:windowActionBar">false</item>-->
         <!--        <item name="android:windowFullscreen">true</item>-->
         <!--        <item name="android:windowContentOverlay">@null</item>-->
+    </style>
+
+    <style name="animation">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
 
     <style name="MyToolbarTheme" parent="MaterialBaseTheme.Light.DarkToolbar">
