--- a/app/src/main/res/layout/registration_fragment.xml
+++ b/app/src/main/res/layout/registration_fragment.xml
@@ -26,6 +26,7 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_alignParentRight="true"
             android:background="?attr/selectableItemBackgroundBorderless"
+            android:visibility="gone"
             app:srcCompat="@drawable/ic_close"
             app:tint="@color/grey_40" />
 
